--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>edu.kirkwood</groupId>
     <artifactId>Calculators-MW</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT-ZeeKonCal</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
